--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
 }
 .link-btn h1 {
-  font-weight: 500;
+  font-weight: 600;
 }
 
 /* Footer */
@@ -72,6 +72,11 @@ body {
   border-radius: 4px;
   position: absolute;
   background-color: #D0D5DD;
+}
+
+/* Contact */ 
+.contact {
+  padding: 156px 360px 188px 360px;
 }
 
 @media only screen and (max-width: 900px) {
