--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,29 @@ input[type=checkbox]:hover {
   left: calc(50% - 55px);
   bottom: -10px;
 }
+/* Error */
+.error-code {
+  color: #1570EF;
+}
+.btn-back {
+  background-color: #ffffff;
+  color: #344054;
+  border: 1px solid #D0D5DD;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+}
+.btn-home {
+  background-color: #1570EF;
+  color: #ffffff;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+}
+.btn-back:hover {
+  background-color: #175CD333;
+}
+.btn-home:hover {
+  background-color: #175CD3;
+}
 
 @media only screen and (max-width: 900px) {
   .options-icon {
